# SSY263

./: .gitignore
2_wheeledrobot_ws/src/robot_2w_description/urdf/: robot_2w.materials.xacro  robot_2w.urdf.xacro
2_wheeledrobot_ws/src/robot_2w_description/urdf/robot_2w_links/: base.urdf.xacro  caster.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  ultrasonic.urdf.xacro  wheel.urdf.xacro
2_wheeledrobot_ws/src/robot_2w_rotation/: package.xml  setup.cfg
2_wheeledrobot_ws/src/robot_2w_rotation/robot_2w_rotation/: wheels_rotation.py
A01/navi_interfaces/: CMakeLists.txt
A01/navigation_pkg/: package.xml
A01/navigation_pkg/src/: navi_node.cpp  navi_sub.cpp
A02/src/navigation_pkg/: CMakeLists.txt
A02/src/navigation_pkg/src/: NaviSubscriber.cpp  navi_node.cpp  sub_navi_node.cpp
A03/src/robot_2w_description/: CMakeLists.txt  model.sdf
A03/src/robot_2w_description/launch/: rviz_robot.launch.py
A03/src/robot_2w_description/rviz/: robot_2w_view.rviz
A03/src/robot_2w_description/urdf/: robot_2w_description.urdf.xacro
A03/src/robot_2w_description/urdf/robot_2w_links/: base.urdf.xacro  caster.urdf.xacro  imu.urdf.xacro  ultrasonic.urdf.xacro  wheel.urdf.xacro
A03/src/robot_2w_rotation/: setup.py
A04/src/robot_2w_ctrl/: CMakeLists.txt  package.xml
A04/src/robot_2w_ctrl/configs/: robot_2w_ctrl.yaml
A04/src/robot_2w_ctrl/include/robot_2w_ctrl/: Robot2WCtrl.h
A04/src/robot_2w_ctrl/launch/: robot_2w_ctrl_gazebo_launch.py
A04/src/robot_2w_ctrl/src/: Robot2WCtrl.cpp
A04/src/robot_2w_ctrl/src/Applications/: robot_2w_control_node.cpp  subs_multi_thread_executor.cpp
A04/src/robot_2w_description/: CMakeLists.txt  model.config  package.xml
A04/src/robot_2w_description/launch/: gazebo_robot.launch.py  rviz_robot.launch.py
A04/src/robot_2w_description/rviz/: robot_2w_gazebo.rviz  robot_2w_view.rviz
A04/src/robot_2w_description/urdf/: robot_2w.urdf.xacro  robot_2w_actuators.urdf.xacro  robot_2w_description.urdf.xacro  robot_2w_sensors.urdf.xacro
A04/src/robot_2w_description/urdf/robot_2w_links/: base.urdf.xacro  caster.urdf.xacro  ultrasonic.urdf.xacro  wheel.urdf.xacro
A05/src/robot_2w_cam/: CMakeLists.txt  package.xml  readme.md
A05/src/robot_2w_cam/configs/: sim_cam.yaml
A05/src/robot_2w_cam/include/robot_2w_cam/: Robot2WCam.hpp
A05/src/robot_2w_cam/launch/: robot_2w_cam_launch.py
A05/src/robot_2w_cam/src/: Robot2WCam.cpp
A05/src/robot_2w_cam/src/Applications/: robot_2w_cam_sim_node.cpp
A05/src/robot_2w_ctrl/: CMakeLists.txt  package.xml  readme.md
A05/src/robot_2w_ctrl/configs/: robot_2w_ctrl.yaml
A05/src/robot_2w_ctrl/include/robot_2w_ctrl/: Robot2WCtrl.h
A05/src/robot_2w_ctrl/launch/: robot_2w_ctrl_gazebo_launch.py
A05/src/robot_2w_ctrl/rviz/: robot_2w.rviz
A05/src/robot_2w_ctrl/src/: Robot2WCtrl.cpp
A05/src/robot_2w_description/: CMakeLists.txt  package.xml  readme.md
A05/src/robot_2w_description/launch/: gazebo_robot.launch.py  rviz_robot.launch.py
A05/src/robot_2w_description/rviz/: robot_2w_cam.rviz  robot_2w_gazebo.rviz  robot_2w_path_gen_ctrl_gazebo.rviz  robot_2w_path_gen_gazebo.rviz
A05/src/robot_2w_description/urdf/: objs.urdf  robot_2w_description.urdf.xacro  robot_2w_parameters.urdf.xacro  robot_2w_sensors.urdf.xacro  top_camera.urdf
A05/src/robot_2w_description/urdf/robot_2w_links/: base.urdf.xacro  caster.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  wheel.urdf.xacro
A05/src/robot_2w_description/world/: robot_2w.world  ssy156_2024_arena.world
A05/src/robot_2w_interfaces/: CMakeLists.txt  package.xml  readme.md
A05/src/robot_2w_interfaces/srv/: GetTFCameraOdom.srv  GetTargetPosesFromCam.srv  SetDesiredPoses.srv
A05/src/robot_2w_path_generator/: package.xml  readme.md  setup.cfg  setup.py
A05/src/robot_2w_path_generator/configs/: robot_2w_path_gen.yaml
A05/src/robot_2w_path_generator/launch/: robot_2w_path_generator_launch.py
A05/src/robot_2w_path_generator/robot_2w_path_generator/: trajectory_generator_module.py
A05/src/robot_2w_path_generator/robot_2w_path_generator/scripts/: path_client.py  path_client_from_cam.py  path_generator_node.py
ros2_ws/navi_interfaces/: package.xml
ros2_ws/navigation_pkg/: CMakeLists.txt
ssy263_A02/src/navigation_pkg/: CMakeLists.txt
ssy263_A02/src/navigation_pkg/include/navigation_pkg/: NaviPublisher.hpp  NaviSubscriber.hpp
ssy263_A02/src/navigation_pkg/src/: NaviPublisher.cpp
